# departmentofpredictions

./: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agents/judge-agent/: .env.example  README.md  package.json  tsconfig.json  wrangler.toml
agents/judge-agent/src/: abi.ts  index.ts  judge.ts  usdc-abi.ts  worker.ts
contracts/: README.md  deploy.sh  foundry.toml
contracts/script/: Deploy.s.sol  DeployCreateX.s.sol  DeployV2.s.sol
contracts/scripts/: sp1_prover.py
contracts/src/: AIJudgeMarket.sol  AIJudgeMarketV1.sol  AIJudgeMarketV2.sol  SP1VerifierIntegration.sol
contracts/src/interfaces/: ICreateX.sol  IERC8004.sol
contracts/test/: AIJudgeMarket.t.sol  AIJudgeMarketV2.t.sol  SP1VerifierIntegration.t.sol
contracts/zkvm/sp1-ai-analysis/: Cargo.toml
contracts/zkvm/sp1-ai-analysis/src/: main.rs
contracts/zkvm/sp1-evidence/: Cargo.toml
contracts/zkvm/sp1-evidence/src/: main.rs
skills/aijudge-market/: README.md  SKILL.md  requirements.txt
skills/aijudge-market/references/: api_reference.md  contract_abi.json
skills/aijudge-market/scripts/: aijudge_client.py  challenge_resolution.py  commit_vote.py  create_market.py  deregister_judge.py  example.py  finalize_resolution.py  get_judge.py  get_market.py  join_court.py  leave_court.py  list_courts.py  register_judge.py  reveal_vote.py  select_judges.py
website/: README.md  next.config.mjs  nixpacks.toml  package.json  tsconfig.json
website/public/: skill.md
website/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
website/src/components/: ParticleField.tsx
(+21 files in other folders)
